--- a/quinzena2/landing-page/estilo.css
+++ b/quinzena2/landing-page/estilo.css
@@ -3,9 +3,6 @@
     padding: 0;
     
 }
-body{
-    width: 100vw;
-}
 
 #cabecalho_mobile{
     display: none;
@@ -13,7 +10,7 @@ body{
 
 .logo {
     display: inline-flex;
-    width: 9vw;
+    width: 170px;
     float: left;
     padding: 6px;
 }
@@ -45,7 +42,6 @@ body{
 
 .image {
     display: flex;
-    width: 100vw;
     padding: 0;
     margin: 0;
 }
@@ -68,7 +64,9 @@ body{
 
 article{
     position: relative;
-    left:35vw;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .company {
@@ -159,10 +157,14 @@ h2 {
 
 
 .formulario {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     padding: 10px;
     margin: 10px;
-    display: inline-block;
     border: 1px solid black;
+    width: 640px;
 }
 
 #candidato {
@@ -179,7 +181,7 @@ input {
 
 
 .logo{
-    height: 20vh;
+    height: 100px;
     position: center;
 }
 
@@ -188,8 +190,13 @@ input {
     display: none;
 }
 
+.img_banner{
+    width: 100%;
+}
+
 .img_banner_mobile{
     display: none;
+    
 }
 
 .social:hover{
@@ -197,7 +204,6 @@ input {
 }
 
 footer {
-    width: 100vw;
     position: relative;
     bottom:0;
     background-color: #82a3a1;
@@ -221,15 +227,16 @@ footer {
     filter: grayscale(100%);
 }
 
+.estilo_botao{
+    border-radius: 25%;
+    background-color: #82a3a1;
+    color:white;
+    border-bottom: none;
+}
+
 
 @media screen and(min-device-width: 4) and (max-device-width: 1280px){
-    body{
-        width: 300vw;
-    }
-    footer {
-        width: 300vw;
-        
-    }
+   
 }
 
 
@@ -261,7 +268,7 @@ footer {
 
     #cabecalho_mobile{
         display: inherit;
-        width: 100vw;
+        /* width: 100vw; */
         height: 20vh;
         color: #c23949;
         background-color:#cea09a;
@@ -364,17 +371,12 @@ footer {
 
     .img_banner_mobile{
         display: inherit;
-        width: 100vw;
         height: 600px;
 
     }
 
     .container{
         height: 0;
-    }
-
-    .tamanho_img{
-        width: 100vw;
     }
 
     .imagens_diversas{
@@ -444,7 +446,7 @@ footer {
         position: relative;
         bottom:0;
         background-color: #82a3a1;
-        width: 100vw;
+        /* width: 100vw; */
     }
 
     .text-social {
